--- a/archivo.html
+++ b/archivo.html
@@ -1,3 +1,3 @@
 Este archivo esta creado para tener un .html y poder desarrollar la tarea
 
-Llegado al punto 4, introduzco un cambio en el archivo.html para poder descargar dicho cambio y actualizar mi repositorio local antes de subir los cambios
+Llegado al punto 4, introduzco una nueva rama llamada cambios y un cambio en el archivo.html para poder descargar dicho cambio y actualizar mi repositorio local antes de subir los cambios
