--- a/archivo.html
+++ b/archivo.html
@@ -5,4 +5,4 @@ Ingreso un nueva linea para hacer un primer commit en la nueva rama notificacion
 Hago una nueva linea para hacer un segundo add y commit en la rama notificaciones
 Llegado al punto 4, introduzco un cambio en el archivo.html para poder descargar dicho cambio y actualizar mi repositorio local antes de subir los cambios
 
-Hago un nuevo cambio que sobre el que no se va a añadir commit
+Hago un nuevo cambio que sobre el que no se va a añadir ningun commit antes de cambiar a main. 
